--- a/index.html
+++ b/index.html
@@ -27,10 +27,41 @@
         .opacity50 {
             opacity: 50%;
         }
-      
+        .lighten {
+            mix-blend-mode: lighten;
+        }
+
     </style>
 </head>
 <body>
+    <!--
+        /* Keyword values */
+        mix-blend-mode: normal;
+        mix-blend-mode: multiply;
+        mix-blend-mode: screen;
+        mix-blend-mode: overlay;
+        mix-blend-mode: darken;
+        mix-blend-mode: lighten;
+        mix-blend-mode: color-dodge;
+        mix-blend-mode: color-burn;
+        mix-blend-mode: hard-light;
+        mix-blend-mode: soft-light;
+        mix-blend-mode: difference;
+        mix-blend-mode: exclusion;
+        mix-blend-mode: hue;
+        mix-blend-mode: saturation;
+        mix-blend-mode: color;
+        mix-blend-mode: luminosity;
+        mix-blend-mode: plus-darker;
+        mix-blend-mode: plus-lighter;
+
+        /* Global values */
+        mix-blend-mode: inherit;
+        mix-blend-mode: initial;
+        mix-blend-mode: revert;
+        mix-blend-mode: revert-layer;
+        mix-blend-mode: unset;
+    -->
     <svg width="0" height="0">
         <filter id="remove-red">
             <feColorMatrix type="matrix" values="0 0 0 0 0
@@ -47,7 +78,7 @@
                                                  0 0 0 1 0"/>
         </filter>
     </svg>
-
+    <!--
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Strereoscope-_Western_Wall_Jerusalem_%28cropped_right%29.jpg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Strereoscope-_Western_Wall_Jerusalem_%28cropped_left%29.jpg">
     <div class="img-wrap">
@@ -62,5 +93,22 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Strereoscope-_Western_Wall_Jerusalem_%28cropped_right%29.jpg" class="cyan-filter" alt="Filtered Image">
         </div>
     </div>
+    -->
+
+    <img src="cube-right.svg">
+    <img src="cube-left.svg">
+    <div class="img-wrap">
+        <img src="cube-right.svg" class="cyan-filter" alt="Filtered Image">
+        <div class="overlay opacity50">
+            <img src="cube-left.svg" class="red-filter" alt="Filtered Image">
+        </div>
+    </div>
+    <div class="img-wrap">
+        <img src="cube-left.svg" class="red-filter" alt="Filtered Image">
+        <div class="overlay opacity50">
+            <img src="cube-right.svg" class="cyan-filter" alt="Filtered Image">
+        </div>
+    </div>
+    Cube image from <a href="https://commons.wikimedia.org/wiki/File:Gray_shaded_3D_cube.svg">Sarang</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA 3.0</a>
 </body>
 </html>
