add opposite freeview pair
accomodate both freeview styles -- crosseyed and old-timey

--- a/index.html
+++ b/index.html
@@ -110,7 +110,22 @@
     <table class="center table">
         <tr>
             <th colspan="2" style="text-align: center;">
-                Stereoscopic pair
+                Freeview pair (parallel)
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <img src="cube-left.svg" class="em40">
+            </td>
+            <td>
+                <img src="cube-right.svg" class="em40">
+            </td>
+        </tr>
+    </table>
+    <table class="center table">
+        <tr>
+            <th colspan="2" style="text-align: center;">
+                Freeview pair (crossed)
             </th>
         </tr>
         <tr>
