--- a/index.html
+++ b/index.html
@@ -136,10 +136,11 @@
 
     <details class="center">
         <summary class="summary">
-            Anaglyphs (overlay)
+            Anaglyphs (lighten)
         </summary>
         <table class="center table">
             <tr><td>
+                Opacity (left over)
                 <div class="img-wrap">
                     <img src="cube-right.svg" class="em40 cyan-filter" alt="Filtered Image">
                     <div class="overlay opacity50">
@@ -148,9 +149,19 @@
                 </div>
             </td></tr>
             <tr><td>
+                Opacity (right over)
+                <div class="img-wrap">
+                    <img src="cube-left.svg" class="em40 red-filter " alt="Filtered Image">
+                    <div class="overlay opacity50">
+                    <img src="cube-right.svg" class="em40 cyan-filter" alt="Filtered Image">
+                    </div>
+                </div>
+            </td></tr>
+            <tr><td>
+                Lighten
                 <div class="img-wrap" style="margin: auto;">
                     <img src="cube-left.svg" class="em40 red-filter" alt="Filtered Image">
-                    <div class="overlay opacity50">
+                    <div class="overlay lighten">
                         <img src="cube-right.svg" class="em40 cyan-filter" alt="Filtered Image">
                     </div>
                 </div>
